good practices component added

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -198,6 +198,9 @@
                   </li>       
                   <li>
                     <a  class="unfinished"[routerLink]="['topics/arraymanipulation']" data-filter-item data-filter-name="arraymanipulation">arraymanipulation</a>
+                  </li>  
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/goodpractices']" data-filter-item data-filter-name="goodpractices">goodpractices</a>
                   </li>               
                 </ul>
               </div>
