Added topic details

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -137,7 +137,7 @@
                     <a [routerLink]="['topics/dependecyinjection']" data-filter-item data-filter-name="dependecyinjection">dependecyinjection</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/problems']" data-filter-item data-filter-name="problems">problems</a>
+                    <a class="unfinished" [routerLink]="['topics/problems']" data-filter-item data-filter-name="problems">problems</a>
                   </li>
                   <li>
                     <a [routerLink]="['topics/differentwaystopassinput']" data-filter-item data-filter-name="differentwaystopassinput">differentwaystopassinput</a>
@@ -155,31 +155,31 @@
                     <a  [routerLink]="['topics/formarray']" data-filter-item data-filter-name="formarray">formarray</a>
                   </li>
                   <li>
-                    <a class="unfinished" [routerLink]="['topics/generics']" data-filter-item data-filter-name="generics">generics</a>
+                    <a [routerLink]="['topics/generics']" data-filter-item data-filter-name="generics">generics</a>
                   </li>
                   <li>
-                    <a class="unfinished" [routerLink]="['topics/injectors']" data-filter-item data-filter-name="injectors">injectors</a>
+                    <a [routerLink]="['topics/injectors']" data-filter-item data-filter-name="injectors">injectors</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/lifecyclehooks']" data-filter-item data-filter-name="lifecyclehooks">lifecyclehooks</a>
+                    <a [routerLink]="['topics/lifecyclehooks']" data-filter-item data-filter-name="lifecyclehooks">lifecyclehooks</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/mapreducefiler']" data-filter-item data-filter-name="mapreducefiler">mapreducefiler</a>
+                    <a [routerLink]="['topics/mapreducefiler']" data-filter-item data-filter-name="mapreducefiler">mapreducefiler</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/ngrxstore']" data-filter-item data-filter-name="ngrxstore">ngrxstore</a>
+                    <a [routerLink]="['topics/ngrxstore']" data-filter-item data-filter-name="ngrxstore">ngrxstore</a>
                   </li>
                   <li>
-                    <a class="unfinished" [routerLink]="['topics/repeat']" data-filter-item data-filter-name="repeat">repeat</a>
+                    <a [routerLink]="['topics/repeat']" data-filter-item data-filter-name="repeat">repeat</a>
                   </li>
                   <li>
-                    <a class="unfinished" [routerLink]="['topics/thrrotlejoin']" data-filter-item data-filter-name="thrrotlejoin">thrrotlejoin</a>
+                    <a [routerLink]="['topics/thrrotlejoin']" data-filter-item data-filter-name="thrrotlejoin">thrrotlejoin</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/singletonpattern']" data-filter-item data-filter-name="singletonpattern">singletonpattern</a>
+                    <a [routerLink]="['topics/singletonpattern']" data-filter-item data-filter-name="singletonpattern">singletonpattern</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/some']" data-filter-item data-filter-name="some">some</a>
+                    <a [routerLink]="['topics/some']" data-filter-item data-filter-name="some">some</a>
                   </li>
                   <li>
                     <a class="unfinished"[routerLink]="['topics/subjects']" data-filter-item data-filter-name="subjects">subjects</a>
