--- a/src/app/topics/genericstypescript/genericstypescript.component.html
+++ b/src/app/topics/genericstypescript/genericstypescript.component.html
@@ -2,5 +2,21 @@
     <div class="container-fluid default-bar">
       <h2>What is Commonly used generics in angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <p>In TypeScript, Generics are basically a kind of tool that enables you to create reusable code components that work with a number of types instead of a single type.</p>
+
+      <p>
+        The generic type parameter is specified in angular brackets after the name of the class. A generic class can have generic fields (member variables) or methods. In the above example, we created a generic class named KeyValuePair with a type variable in the angle brackets &lt;T, U&gt; 
+      </p>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <div class="row"><a href="https://stackblitz.com/edit/angular-typescript-generics?file=app%2Ftest.d.ts" target="_blank">stackblitz</a></div>
+          
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.pluralsight.com/guides/using-generics-angular" target="_blank">pluralsight</a></li>
+          <li><a href="https://medium.com/@rossbulat/typescript-generics-explained-15c6493b510f" target="_blank">medium</a></li>
+      </ul>
     </div>
 </main>
