--- a/src/app/topics/mapreducefilterfind/mapreducefilterfind.component.html
+++ b/src/app/topics/mapreducefilterfind/mapreducefilterfind.component.html
@@ -2,5 +2,23 @@
     <div class="container-fluid default-bar">
       <h2>What is map/reduce/filter/find in angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <ul>
+        <li><b>map():</b>The Map object holds key-value pairs and remembers the original insertion order of the keys. Any value (both objects and primitive values) may be used as either a key or a value.</li>
+        <li><b>reduce():</b>reduce() method applies a function simultaneously against two values of the array (from left-to-right) as to reduce it to a single value.</li>
+        <li><b>filter():</b>filter() method creates a new array with all elements that pass the test implemented by the provided function.</li>
+        <li><b>find():</b>The find() method returns the value of the first element in the provided array that satisfies the provided testing function.</li>
+        
+
+      </ul>
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <div class="row"><a href="https://stackblitz.com/edit/javascript-map-reduce-filter-sort" target="_blank">stackblitz</a></div>
+          <div class="row"><a href="https://stackblitz.com/edit/arrow-function-map-filter-reduce" target="_blank">stackblitz</a></div>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://medium.com/poka-techblog/simplify-your-javascript-use-map-reduce-and-filter-bd02c593cc2d" target="_blank">medium</a></li>
+          <li><a href="https://codeburst.io/array-methods-explained-filter-vs-map-vs-reduce-vs-foreach-ea3127c6d319" target="_blank">codeburst</a></li>
+      </ul>
     </div>
 </main>
