--- a/src/app/topics/ngrxstore/ngrxstore.component.html
+++ b/src/app/topics/ngrxstore/ngrxstore.component.html
@@ -2,5 +2,18 @@
     <div class="container-fluid default-bar">
       <h2>What is ngrx store in angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <p>Store is RxJS powered state management for Angular applications, inspired by Redux. Store is a controlled state container designed to help write performant, consistent applications on top of Angular.
+      </p>
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <div class="row"><a href="https://stackblitz.com/edit/ngrx-store-full-example" target="_blank">stackblitz</a></div>
+          <div class="row"><a href="https://stackblitz.com/edit/angular-ngrx-store" target="_blank">stackblitz</a></div>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.telerik.com/blogs/building-an-online-store-using-ngrx-store-and-angular#:~:text=NgRx%2Fstore%20is%20a%20library,them%20and%20mutate%20the%20store." target="_blank">telerik</a></li>
+          <li><a href="https://ngrx.io/guide/store" target="_blank">ngrx.io</a></li>
+      </ul>
+
     </div>
 </main>
