--- a/src/app/topics/repeatrxjs/repeatrxjs.component.html
+++ b/src/app/topics/repeatrxjs/repeatrxjs.component.html
@@ -2,5 +2,16 @@
     <div class="container-fluid default-bar">
       <h2>What is repeat in rxjs? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <p><b>repeat(count):</b>Returns an Observable that repeats the stream of items emitted by the source Observable at most count times.</p>
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <div class="row"><a href="https://stackblitz.com/edit/rxjs-repeat-learnrxjs" target="_blank">stackblitz</a></div>
+          <div class="row"><a href="https://stackblitz.com/edit/rxjs-repeat-gbceay" target="_blank">stackblitz</a></div>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.learnrxjs.io/learn-rxjs/operators/utility/repeat" target="_blank">learnrxjs</a></li>
+          <li><a href="http://reactivex.io/documentation/operators/repeat.html" target="_blank">reactivex</a></li>
+      </ul>
     </div>
 </main>
