--- a/src/app/topics/someinangular/someinangular.component.html
+++ b/src/app/topics/someinangular/someinangular.component.html
@@ -1,6 +1,17 @@
 <main class="page-content">
     <div class="container-fluid default-bar">
-      <h2>What is some keyword in angular? What is Practical Use of it? Please Provide Examples</h2>
+      <h2>What is some keyword in typescript? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <p>some() method tests whether some element in the array passes the test implemented by the provided function.</p>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <div class="row"><a href="https://stackblitz.com/edit/array-manipulation-functions" target="_blank">stackblitz</a></div>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.tutorialspoint.com/typescript/typescript_array_some.htm" target="_blank">tutorialspoint</a></li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/some" target="_blank">mozilla</a></li>
+      </ul>
     </div>
 </main>
