--- a/src/app/topics/injectors/injectors.component.html
+++ b/src/app/topics/injectors/injectors.component.html
@@ -2,5 +2,26 @@
     <div class="container-fluid default-bar">
       <h2>What is injectors in angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <p>
+        Dependency injection (DI), is an important application design pattern. Angular has its own DI framework, which is typically used in the design of Angular applications to increase their efficiency and modularity.
+      </p>
+
+      <p>
+        Dependencies are services or objects that a class needs to perform its function. DI is a coding pattern in which a class asks for dependencies from external sources rather than creating them itself.
+      </p>
+      <p>
+        In Angular, the DI framework provides declared dependencies to a class when that class is instantiated. This guide explains how DI works in Angular, and how you use it to make your apps flexible, efficient, and robust, as well as testable and maintainable.
+      </p>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <div class="row"><a href="https://stackblitz.com/edit/angular-custom-injector" target="_blank">stackblitz</a></div>
+          <div class="row"><a href="https://stackblitz.com/edit/angular-injector-create?file=src%2Fapp%2Fapp.module.ts" target="_blank">stackblitz</a></div>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://angular.io/guide/hierarchical-dependency-injection" target="_blank">angular.io</a></li>
+          <li><a href="https://codecraft.tv/courses/angular/dependency-injection-and-providers/injectors/" target="_blank">codecraft</a></li>
+      </ul>
     </div>
 </main>
