--- a/src/app/topics/lifecyclehooksangular/lifecyclehooksangular.component.html
+++ b/src/app/topics/lifecyclehooksangular/lifecyclehooksangular.component.html
@@ -2,5 +2,37 @@
     <div class="container-fluid default-bar">
       <h2>What is Commonly used lifecycle hooks in angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <p>
+        A component instance has a lifecycle that starts when Angular instantiates the component class and renders the component view along with its child views. The lifecycle continues with change detection, as Angular checks to see when data-bound properties change, and updates both the view and the component instance as needed. The lifecycle ends when Angular destroys the component instance and removes its rendered template from the DOM. Directives have a similar lifecycle, as Angular creates, updates, and destroys instances in the course of execution.
+      </p>
+
+      <p>
+        Your application can use lifecycle hook methods to tap into key events in the lifecycle of a component or directive in order to initialize new instances, initiate change detection when needed, respond to updates during change detection, and clean up before deletion of instances.
+      </p>
+      <p>
+        In Angular, the DI framework provides declared dependencies to a class when that class is instantiated. This guide explains how DI works in Angular, and how you use it to make your apps flexible, efficient, and robust, as well as testable and maintainable.
+      </p>
+      <p>Hooks for the Component:</p>
+      <ul>
+        <li><b>ngOnChanges:</b>Called every time a data-bound input property changes. It’s called a first time before the ngOnInit hook. The hook receives a SimpleChanges object that contains the previous and current values for the data-bound inputs properties. This hook gets called often, so it’s a good idea to limit the amount of processing it does.</li>
+        <li><b>ngOnInit:</b>Called once upon initialization of the component.</li>
+        <li><b>ngDoCheck:</b>Use this hook instead of ngOnChanges for changes that Angular doesn’t detect. It gets called at every change detection cycle, so keeping what it does to a minimum is important for performance.</li>
+        <li><b>ngAfterContentInit:</b>Called after content is projected in the component.</li>
+        <li><b>ngAfterContentChecked:</b>Called after the projected content is checked.</li>
+        <li><b>ngAfterViewInit:</b>Called after a component’s view or child view is initialized.</li>
+        <li><b>ngAfterViewChecked:</b>Called after a component’s view or child view is checked.</li>
+        <li><b>ngOnDestroy:</b>Called once when the component is destroyed and a good hook to use to cleanup and unsubscribe from observables.</li>
+
+      </ul>
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <div class="row"><a href="https://stackblitz.com/edit/lifecycle-hooks-angular" target="_blank">stackblitz</a></div>
+          <div class="row"><a href="https://stackblitz.com/edit/angular-life-cycle-hooks-example" target="_blank">stackblitz</a></div>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://codecraft.tv/courses/angular/components/lifecycle-hooks/#_hooks_for_the_component" target="_blank">codecraft</a></li>
+          <li><a href="https://www.tutorialspoint.com/angular2/angular2_lifecycle_hooks.htm" target="_blank">tutorialspoint</a></li>
+      </ul>
     </div>
 </main>
