new components added

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -201,7 +201,43 @@
                   </li>  
                   <li>
                     <a  class="unfinished"[routerLink]="['topics/goodpractices']" data-filter-item data-filter-name="goodpractices">goodpractices</a>
-                  </li>               
+                  </li>
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/angulardigestcycle']" data-filter-item data-filter-name="goodpractices">Angular Digest Cycle</a>
+                  </li>    
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/classvsproto']" data-filter-item data-filter-name="goodpractices">class vs prototype inheritance</a>
+                  </li>  
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/dcovsanotation']" data-filter-item data-filter-name="dcovsanotation">Decorator vs Annotations</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/diffprog']" data-filter-item data-filter-name="dcovsanotation">Diffeance between Programming Lang</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/diffbinding']" data-filter-item data-filter-name="dcovsanotation">Diffeant Binding Expressions</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/diffconstvsfactory']" data-filter-item data-filter-name="dcovsanotation">Diffeance between Constructor and factory</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/functionalbinding']" data-filter-item data-filter-name="functionalbinding">Diffeant Functional Binding</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/hoisting']" data-filter-item data-filter-name="functionalbinding">Hoisitng</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/loadash']" data-filter-item data-filter-name="loadash">Lodash</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/ngx-logger']" data-filter-item data-filter-name="ngx-logger">NGX-Logger</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/scope']" data-filter-item data-filter-name="ngx-logger">Scope Hierarchy</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/serviceworker']" data-filter-item data-filter-name="ngx-logger">Service Worker</a>
+                  </li> 
                 </ul>
               </div>
             </li>
