--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -182,61 +182,61 @@
                     <a [routerLink]="['topics/some']" data-filter-item data-filter-name="some">some</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/subjects']" data-filter-item data-filter-name="subjects">subjects</a>
+                    <a [routerLink]="['topics/subjects']" data-filter-item data-filter-name="subjects">subjects</a>
                   </li>
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/websockets']" data-filter-item data-filter-name="websockets">websockets</a>
+                    <a [routerLink]="['topics/websockets']" data-filter-item data-filter-name="websockets">websockets</a>
                   </li>   
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/observerpattern']" data-filter-item data-filter-name="observerpattern">observerpattern</a>
+                    <a [routerLink]="['topics/observerpattern']" data-filter-item data-filter-name="observerpattern">observerpattern</a>
                   </li>    
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/facadepattern']" data-filter-item data-filter-name="facadepattern">facadepattern</a>
+                    <a [routerLink]="['topics/facadepattern']" data-filter-item data-filter-name="facadepattern">facadepattern</a>
                   </li>  
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/routerevents']" data-filter-item data-filter-name="routerevents">routerevents</a>
+                    <a [routerLink]="['topics/routerevents']" data-filter-item data-filter-name="routerevents">routerevents</a>
                   </li>       
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/arraymanipulation']" data-filter-item data-filter-name="arraymanipulation">arraymanipulation</a>
+                    <a [routerLink]="['topics/arraymanipulation']" data-filter-item data-filter-name="arraymanipulation">arraymanipulation</a>
                   </li>  
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/goodpractices']" data-filter-item data-filter-name="goodpractices">goodpractices</a>
+                    <a  class="unfinished" [routerLink]="['topics/goodpractices']" data-filter-item data-filter-name="goodpractices">goodpractices</a>
                   </li>
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/angulardigestcycle']" data-filter-item data-filter-name="goodpractices">Angular Digest Cycle</a>
+                    <a [routerLink]="['topics/angulardigestcycle']" data-filter-item data-filter-name="goodpractices">Angular Digest Cycle</a>
                   </li>    
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/classvsproto']" data-filter-item data-filter-name="goodpractices">class vs prototype inheritance</a>
+                    <a  class="unfinished" [routerLink]="['topics/classvsproto']" data-filter-item data-filter-name="classvsproto">class vs prototype inheritance</a>
                   </li>  
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/dcovsanotation']" data-filter-item data-filter-name="dcovsanotation">Decorator vs Annotations</a>
+                    <a  class="unfinished" [routerLink]="['topics/dcovsanotation']" data-filter-item data-filter-name="dcovsanotation">Decorator vs Annotations</a>
                   </li> 
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/diffprog']" data-filter-item data-filter-name="dcovsanotation">Diffeance between Programming Lang</a>
+                    <a  class="unfinished" [routerLink]="['topics/diffprog']" data-filter-item data-filter-name="diffprog">Diffeance between Programming Lang</a>
                   </li> 
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/diffbinding']" data-filter-item data-filter-name="dcovsanotation">Diffeant Binding Expressions</a>
+                    <a  class="unfinished" [routerLink]="['topics/diffbinding']" data-filter-item data-filter-name="dcovsanotation">Diffeant Binding Expressions</a>
                   </li> 
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/diffconstvsfactory']" data-filter-item data-filter-name="dcovsanotation">Diffeance between Constructor and factory</a>
+                    <a  class="unfinished" [routerLink]="['topics/diffconstvsfactory']" data-filter-item data-filter-name="dcovsanotation">Diffeance between Constructor and factory</a>
                   </li> 
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/functionalbinding']" data-filter-item data-filter-name="functionalbinding">Diffeant Functional Binding</a>
+                    <a  class="unfinished" [routerLink]="['topics/functionalbinding']" data-filter-item data-filter-name="functionalbinding">Diffeant Functional Binding</a>
                   </li> 
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/hoisting']" data-filter-item data-filter-name="functionalbinding">Hoisitng</a>
+                    <a  class="unfinished" [routerLink]="['topics/hoisting']" data-filter-item data-filter-name="functionalbinding">Hoisitng</a>
                   </li> 
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/loadash']" data-filter-item data-filter-name="loadash">Lodash</a>
+                    <a  class="unfinished" [routerLink]="['topics/loadash']" data-filter-item data-filter-name="loadash">Lodash</a>
                   </li> 
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/ngx-logger']" data-filter-item data-filter-name="ngx-logger">NGX-Logger</a>
+                    <a  class="unfinished" [routerLink]="['topics/ngx-logger']" data-filter-item data-filter-name="ngx-logger">NGX-Logger</a>
                   </li> 
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/scope']" data-filter-item data-filter-name="ngx-logger">Scope Hierarchy</a>
+                    <a  class="unfinished" [routerLink]="['topics/scope']" data-filter-item data-filter-name="ngx-logger">Scope Hierarchy</a>
                   </li> 
                   <li>
-                    <a  class="unfinished"[routerLink]="['topics/serviceworker']" data-filter-item data-filter-name="ngx-logger">Service Worker</a>
+                    <a  class="unfinished" [routerLink]="['topics/serviceworker']" data-filter-item data-filter-name="ngx-logger">Service Worker</a>
                   </li> 
                 </ul>
               </div>
