--- a/src/app/topics/arraymanipulations/arraymanipulations.component.html
+++ b/src/app/topics/arraymanipulations/arraymanipulations.component.html
@@ -4,5 +4,14 @@
       <div class="row"><a href="https://medium.com/dailyjs/code-recipe-how-to-reverse-an-array-in-javascript-4a0306001d28" target="_blank">reverse an array</a></div>
       <hr>
       <div class="row"><a href="https://medium.com/@wisecobbler/4-ways-to-populate-an-array-in-javascript-836952aea79f" target="_blank">populate an array</a></div>
+
+
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.freecodecamp.org/news/manipulating-arrays-in-javascript/" target="_blank">freecodecamp</a></li>
+          <li><a href="https://www.elated.com/manipulating-javascript-arrays/" target="_blank">elated</a></li>
+      </ul>
+
     </div>
 </main>
