--- a/src/app/topics/facadepattern/facadepattern.component.html
+++ b/src/app/topics/facadepattern/facadepattern.component.html
@@ -3,5 +3,15 @@
       <h2>What is Facade Pattern in angular? What is Practical Use of it? Please Provide Examples</h2>
       <div class="row"><a href="https://levelup.gitconnected.com/design-patterns-in-modern-javascript-development-ec84d8be06ca" target="_blank">I have seen here</a></div>
       <hr>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/KQdiA2HtOxU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://medium.com/angular-in-depth/angular-you-may-not-need-ngrx-e80546cc56ee" target="_blank">medium</a></li>
+          <li><a href="https://medium.com/@balramchavan/best-practices-building-angular-services-using-facade-design-pattern-for-complex-systems-d8c516cb95eb" target="_blank">medium</a></li>
+      </ul>
+
     </div>
 </main>
