--- a/src/app/topics/observerpattern/observerpattern.component.html
+++ b/src/app/topics/observerpattern/observerpattern.component.html
@@ -3,5 +3,16 @@
       <h2>What is Observer Pattern in angular? What is Practical Use of it? Please Provide Examples</h2>
       <div class="row"><a href="https://levelup.gitconnected.com/design-patterns-in-modern-javascript-development-ec84d8be06ca" target="_blank">I have seen here</a></div>
       <hr>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/1XFxycO2uYQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/GioexP_s5Yc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://ultimatecourses.com/blog/rxjs-observables-observers-operators" target="_blank">ultimatecourses</a></li>
+          <li><a href="https://codeburst.io/implementing-observer-pattern-on-typescript-344e62a1e468" target="_blank">codeburst-conference</a></li>
+      </ul>
+
     </div>
 </main>
