--- a/src/app/topics/routerevents/routerevents.component.html
+++ b/src/app/topics/routerevents/routerevents.component.html
@@ -3,5 +3,27 @@
       <h2>What are routerevents in angular? what is Practical Use of it? Please Provide Examples</h2>
       <div class="row"><a href="https://medium.com/@nsrathore/router-event-handling-angular-5-5-2-0-723bfe39cdf1" target="_blank">I have seen here</a></div>
       <hr>
+
+      <h4>Router Events:</h4>
+      <p>In a single-page app, you change what the user sees by showing or hiding portions of the display that correspond to particular components, rather than going out to the server to get a new page. As users perform application tasks, they need to move between the different views that you have defined. To implement this kind of navigation within the single page of your app, you use the Angular Router.
+      </p>
+
+      <p>To handle the navigation from one view to the next, you use the Angular router. The router enables navigation by interpreting a browser URL as an instruction to change the view.
+      </p>
+
+      <p>The Angular Routers triggers several events starting with when the Navigation starts ( NavigationStart ) and also when the Navigation end ( NavigationEnd ) successfully. It is triggered when the navigation is canceled either by the user ( NavigationCancel ) or due to an error in the navigation ( NavigationError). The Events trigger when the lazy loaded modules are about to load and when they finish loading. They trigger before and after the guards like canActivate, canActivateChild. Events fire before and after the Angular runs the Route Resolvers..
+      </p>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+      <hr>
+      <div class="row"><a href="https://stackblitz.com/edit/angular-router-event?file=app%2Fapp.component.ts" target="_blank">stackblitz</a></div>
+      <div class="row"> <a href="https://stackblitz.com/edit/angular-router-events" target="_blank">stackblitz</a></div>
+     
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://angular.io/guide/router" target="_blank">angular.io</a></li>
+          <li><a href="https://www.tektutorialshub.com/angular/angular-router-events/" target="_blank">tektutorialshub</a></li>
+      </ul>
     </div>
 </main>
