--- a/src/app/topics/websockets/websockets.component.html
+++ b/src/app/topics/websockets/websockets.component.html
@@ -2,5 +2,22 @@
     <div class="container-fluid default-bar">
       <h2>What is websockets in angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/8CNVYWiR5fg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+      <h4 class="mt-4">Websockets:</h4>
+      <p>
+        Angular utilizes RxJS which is essentially a javascript implementation of reactive extensions. This is a library for composing asynchronous and event-based programs using observable sequences and is perfect for working with WebSockets.
+      </p>
+      <p>Simply put, RxJS allows us to listen to new messages from a websocket connection and then perform an action when ‘X’ event occurs. An example of this could be in a real-time chat application. Say we have 3 people connected to our chat application and one of them sends a message. If we want to do something in our application whenever we receive a message then we can simply subscribe to a ‘new-message’ event and handle the event whenever it is triggered.      </p>
+      
+     
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://tutorialedge.net/typescript/angular/angular-websockets-tutorial/" target="_blank">tutorialedge</a></li>
+          <li><a href="https://javascript-conference.com/blog/real-time-in-angular-a-journey-into-websocket-and-rxjs/" target="_blank">javascript-conference</a></li>
+      </ul>
+
     </div>
 </main>
