--- a/src/app/topics/angulardigestcycle/angulardigestcycle.component.html
+++ b/src/app/topics/angulardigestcycle/angulardigestcycle.component.html
@@ -2,5 +2,20 @@
     <div class="container-fluid default-bar">
       <h2>What is angular digest cycle ? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>Digest cycle is what Angular JS triggers when a value in the model or view is changed. The cycle sets off the watchers which then match the value of model and view to the newest value. Digest cycle automatically runs when the code encounters a directive.</p>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+      <hr>
+      <div class="row"><a href="https://stackblitz.com/edit/lifecycle-hooks-angular" target="_blank">stackblitz</a></div>
+      <div class="row"> <a href="https://stackblitz.com/angular/klxvvdeqygk" target="_blank">stackblitz</a></div>
+     
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.dotsquares.com/news_events/what-is-digest-cycle-in-angular-js-and-how-does-it-make-two-way-data-binding-possible/#:~:text=Digest%20cycle%20is%20what%20Angular,the%20code%20encounters%20a%20directive." target="_blank">dotsquares</a></li>
+          <li><a href="https://www.sitepoint.com/understanding-angulars-apply-digest/" target="_blank">sitepoint</a></li>
+      </ul>
+
     </div>
 </main>
