--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -238,6 +238,45 @@
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/serviceworker']" data-filter-item data-filter-name="ngx-logger">Service Worker</a>
                   </li> 
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/cachehttp']" data-filter-item data-filter-name="cachehttp">Cache Http</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/collectiongenerators']" data-filter-item data-filter-name="collectiongenerators">collectiongenerators</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/datastructures']" data-filter-item data-filter-name="datastructures">datastructures</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/differentmethods']" data-filter-item data-filter-name="differentmethods">differentmethods</a>
+                  </li>              
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/dom']" data-filter-item data-filter-name="dom">dom</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/eventbubbling']" data-filter-item data-filter-name="eventbubbling">eventbubbling</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/eventmethods']" data-filter-item data-filter-name="eventmethods">eventmethods</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/higherorderfunctions']" data-filter-item data-filter-name="higherorderfunctions">higherorderfunctions</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/primitvedatatype']" data-filter-item data-filter-name="primitvedatatype">primitvedatatype</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/promiseall']" data-filter-item data-filter-name="promiseall">promiseall</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/questions']" data-filter-item data-filter-name="questions">questions</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/typecoeriction']" data-filter-item data-filter-name="typecoeriction">typecoeriction</a>
+                  </li> 
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/valuetypereftype']" data-filter-item data-filter-name="valuetypereftype">valuetypereftype</a>
+                  </li>
                 </ul>
               </div>
             </li>
