--- a/src/app/topics/functionalbinding/functionalbinding.component.html
+++ b/src/app/topics/functionalbinding/functionalbinding.component.html
@@ -1,1 +1,6 @@
-<p>functionalbinding works!</p>
+<main class="page-content">
+    <div class="container-fluid default-bar">
+      <h2>what is funcational binding in angular? what are their practical usage? please provide examples</h2>
+      <hr>
+    </div>
+</main>
