--- a/src/app/topics/typecoeriction/typecoeriction.component.html
+++ b/src/app/topics/typecoeriction/typecoeriction.component.html
@@ -1,6 +1,6 @@
 <main class="page-content">
     <div class="container-fluid default-bar">
-      <h2>what is hoisting in angular? what are their practical usage? please provide examples</h2>
+      <h2>what is type coeriction? what are their practical usage? please provide examples</h2>
       <hr>
     </div>
 </main>
